# mermaid_parser

./: .gitignore  CODING_STANDARDS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lint_todo.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benches/: parser_benchmarks.rs
doc/: book.toml
doc/src/: SUMMARY.md  ast-analysis.md  basic-usage.md  custom-parsing.md  error-handling.md  getting-started.md  introduction.md  metrics.md  parser-architecture.md  performance.md  supported-diagrams.md
examples/: ast_analysis.rs  basic_parsing.rs  batch_processing.rs  detect_type.rs  error_handling.rs  parse_all_types.rs  test_visitor_docs.rs  validation.rs
issues/: architecture_rstest.md  ci_cd_pipeline.md  class_rstest.md  code_coverage.md  diagram_metrics.md  error_message_quality.md  flowchart_rstest.md  parser_header_validation_abstraction.md  sankey_rstest.md  sequence_rstest_migration.md  standardize_test_generation_patterns.md  state_rstest_migration.md  usage_examples.md
issues/complete/: ast_visitors.md  benchmarking_framework.md  block_rstest.md  c4_rstest.md  common_directive_parsing_utilities.md  crate_publication.md  create_shared_parsing_utilities.md  diagram_validation.md  extract_magic_string_constants.md  lint_configuration.md  pretty_printing.md  step_block.md  step_misc.md  step_timeline.md  step_xy.md  timeline_rstest.md  treemap_rstest.md
mermaid-parser/plan/: complete_grammar_analysis.md  complete_implementation_roadmap.md  grammar_analysis.md  implementation_roadmap.md  step_c4.md  step_class.md  step_er.md  step_flowchart.md  step_gantt.md  step_git.md  step_journey.md  step_kanban.md  step_packet.md  step_quadrant.md  step_radar.md  step_requirement.md  step_sankey.md
mermaid-parser/src/: lib.rs
mermaid-samples/architecture/: architectureDetector_ts_000.mermaid  architectureParser_ts_000.mermaid  architectureRenderer_ts_000.mermaid  architecture_md_000.mermaid  architecture_md_002.mermaid  architecture_spec_ts_000.mermaid  architecture_spec_ts_001.mermaid  architecture_spec_ts_002.mermaid  architecture_spec_ts_003.mermaid  architecture_spec_ts_005.mermaid  architecture_spec_ts_007.mermaid  architecture_spec_ts_010.mermaid  architecture_spec_ts_012.mermaid  architecture_test_ts_002.mermaid  architecture_test_ts_003.mermaid  architecture_test_ts_005.mermaid  architecture_test_ts_007.mermaid  mermaidAPI_spec_ts_041.mermaid  parse_ts_002.mermaid  svgDraw_ts_000.mermaid  svgDraw_ts_002.mermaid  svgDraw_ts_003.mermaid  tokenBuilder_ts_000.mermaid
mermaid-samples/block/: blockTypes_ts_000.mermaid  block_md_001.mermaid  block_md_002.mermaid  block_md_003.mermaid  block_md_010.mermaid  block_md_013.mermaid  block_md_015.mermaid  block_md_018.mermaid  block_md_020.mermaid  block_md_022.mermaid  block_md_025.mermaid  block_md_026.mermaid  block_md_027.mermaid  block_md_028.mermaid  block_spec_js_001.mermaid  block_spec_js_004.mermaid  block_spec_js_006.mermaid  block_spec_js_008.mermaid  block_spec_js_010.mermaid  (+24 more)
plan/: step_architecture.md  step_mindmap.md  step_pie.md  step_state.md  step_treemap.md
scripts/: EXTRACTION_SUMMARY.md  extract_mermaid_samples.py  verify_samples.py
specification/: COMPLETE_PROJECT_STATUS.md  PROJECT_STATUS.md  port.md
src/: error.rs  lib.rs
tests/: architecture_coverage_test.rs  architecture_test.rs  block_test.rs  c4_test.rs  class_test.rs  er_test.rs  flowchart_test.rs  gantt_test.rs  git_test.rs  journey_test.rs  kanban_coverage_test.rs  kanban_test.rs  metrics_comprehensive_test.rs  mindmap_coverage_test.rs  mindmap_test.rs  misc_test.rs  packet_coverage_test.rs  packet_test.rs  pie_coverage_test.rs  pie_test.rs  pretty_print_basic_coverage_test.rs  pretty_print_comprehensive_test.rs  pretty_print_coverage_improvement_test.rs  pretty_print_missing_coverage_test.rs  pretty_print_test.rs  pretty_print_unit_test.rs  quadrant_coverage_test.rs  quadrant_test.rs  radar_comprehensive_test.rs  radar_test.rs  requirement_coverage_test.rs  requirement_test.rs  sankey_coverage_test.rs  sankey_test.rs  sequence_coverage_test.rs  sequence_test.rs  simple_pretty_print_test.rs  state_coverage_test.rs  state_test.rs  timeline_test.rs  (+8 more)
(+2259 files in other folders)
