[package]
name = "mermaid-parser"
version = "0.1.0"
authors = ["William Ballard <wballard@mailbox.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast, reliable parser for Mermaid diagram syntax with comprehensive diagram type support"
repository = "https://github.com/wballard/mermaid-parser"
homepage = "https://github.com/wballard/mermaid-parser"
documentation = "https://docs.rs/mermaid-parser"
readme = "README.md"
keywords = ["mermaid", "parser", "diagram", "visualization", "graph"]
categories = ["parser-implementations", "visualization", "text-processing"]
rust-version = "1.70.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chumsky = "0.10.1"

[dev-dependencies]
rstest = "0.21"
criterion = "0.5"

[[bench]]
name = "parser_benchmarks"
harness = false
